@@ -30,6 +30,7 @@
  */
 package org.javacc.cpp.todo;
 
+import org.javacc.cpp.Types;
 import org.javacc.parser.CodeGenHelper;
 import org.javacc.parser.JavaCCErrors;
 import org.javacc.parser.JavaCCGlobals;
@@ -66,14 +67,13 @@ public class NfaState
    private static List<NfaState> allStates = new ArrayList<NfaState>();
    private static List<NfaState> indexedAllStates = new ArrayList<NfaState>();
    private static List<NfaState> nonAsciiTableForMethod = new ArrayList<NfaState>();
-   private static Hashtable equivStatesTable = new Hashtable();
-   private static Hashtable allNextStates = new Hashtable();
-   private static Hashtable lohiByteTab = new Hashtable();
-   private static Hashtable stateNameForComposite = new Hashtable();
-   private static Hashtable compositeStateTable = new Hashtable();
-   private static Hashtable stateBlockTable = new Hashtable();
-   private static Hashtable stateSetsToFix = new Hashtable();
-
+   private static Hashtable<String, NfaState> equivStatesTable = new Hashtable<>();
+   private static Hashtable<String, int[]> allNextStates = new Hashtable<>();
+   private static Hashtable<String, Integer> lohiByteTab = new Hashtable<>();
+   private static Hashtable<String, Integer> stateNameForComposite = new Hashtable<>();
+   private static Hashtable<String, int[]> compositeStateTable = new Hashtable<>();
+   private static Hashtable<String, String> stateBlockTable = new Hashtable<>();
+   private static Hashtable<String, int[]> stateSetsToFix = new Hashtable<>();
    private static boolean jjCheckNAddStatesUnaryNeeded = false;
    private static boolean jjCheckNAddStatesDualNeeded = false;
 
@@ -119,9 +119,8 @@ public class NfaState
    private int[] compositeStates = null;
    private Set<NfaState> compositeStateSet = new HashSet<NfaState>();
    public boolean isFinal = false;
-   private Vector loByteVec;
+   private Vector<Integer> loByteVec;
    private int[] nonAsciiMoveIndices;
-   private int round = 0;
    private int onlyChar = 0;
    private char matchSingleChar;
 
@@ -148,14 +147,14 @@ public class NfaState
       return retVal;
    }
 
-   static void InsertInOrder(List v, NfaState s)
+   static void InsertInOrder(List<NfaState> v, NfaState s)
    {
       int j;
 
       for (j = 0; j < v.size(); j++)
-         if (((NfaState)v.get(j)).id > s.id)
+         if (v.get(j).id > s.id)
             break;
-         else if (((NfaState)v.get(j)).id  == s.id)
+         else if (v.get(j).id  == s.id)
             return;
 
       v.add(j, s);
@@ -187,7 +186,7 @@ public class NfaState
       char temp;
       char temp1;
 
-      if ((int)c < 128) // ASCII char
+      if (c < 128) // ASCII char
       {
          AddASCIIMove(c);
          return;
@@ -338,17 +337,17 @@ public class NfaState
 
       // Recursively do closure
       for (i = 0; i < epsilonMoves.size(); i++)
-         ((NfaState)epsilonMoves.get(i)).EpsilonClosure();
+         epsilonMoves.get(i).EpsilonClosure();
 
       Enumeration<NfaState> e = epsilonMoves.elements();
 
       while (e.hasMoreElements())
       {
-         NfaState tmp = (NfaState)e.nextElement();
+         NfaState tmp = e.nextElement();
 
          for (i = 0; i < tmp.epsilonMoves.size(); i++)
          {
-            NfaState tmp1 = (NfaState)tmp.epsilonMoves.get(i);
+            NfaState tmp1 = tmp.epsilonMoves.get(i);
             if (tmp1.UsefulState() && !epsilonMoves.contains(tmp1))
             {
                InsertInOrder(epsilonMoves, tmp1);
@@ -432,16 +431,16 @@ public class NfaState
 
    NfaState CreateEquivState(List<NfaState> states)
    {
-      NfaState newState = ((NfaState)states.get(0)).CreateClone();
+      NfaState newState = states.get(0).CreateClone();
 
       newState.next = new NfaState();
 
       InsertInOrder(newState.next.epsilonMoves,
-                           ((NfaState)states.get(0)).next);
+                           states.get(0).next);
 
       for (int i = 1; i < states.size(); i++)
       {
-         NfaState tmp2 = ((NfaState)states.get(i));
+         NfaState tmp2 = (states.get(i));
 
          if (tmp2.kind < newState.kind)
             newState.kind = tmp2.kind;
@@ -459,7 +458,7 @@ public class NfaState
       Outer :
       for (int i = allStates.size(); i-- > 0;)
       {
-         NfaState other = (NfaState)allStates.get(i);
+         NfaState other = allStates.get(i);
 
          if (this != other && other.stateName != -1 &&
              kindToPrint == other.kindToPrint &&
@@ -525,7 +524,7 @@ public class NfaState
    {
       for (int i = allStates.size(); i-- > 0; )
       {
-         NfaState tmp = (NfaState)allStates.get(i);
+         NfaState tmp = allStates.get(i);
 
          if (!tmp.closureDone)
             tmp.OptimizeEpsilonMoves(true);
@@ -533,7 +532,7 @@ public class NfaState
 
       for (int i = 0; i < allStates.size(); i++)
       {
-         NfaState tmp = (NfaState)allStates.get(i);
+         NfaState tmp = allStates.get(i);
 
          if (!tmp.closureDone)
             tmp.OptimizeEpsilonMoves(false);
@@ -541,7 +540,7 @@ public class NfaState
 
       for (int i = 0; i < allStates.size(); i++)
       {
-         NfaState tmp = (NfaState)allStates.get(i);
+         NfaState tmp = allStates.get(i);
          tmp.epsilonMoveArray = new NfaState[tmp.epsilonMoves.size()];
          tmp.epsilonMoves.copyInto(tmp.epsilonMoveArray);
       }
@@ -566,8 +565,8 @@ public class NfaState
       }
 
       for (i = allStates.size(); i-- > 0;)
-         ((NfaState)allStates.get(i)).closureDone =
-                                  mark[((NfaState)allStates.get(i)).id];
+         allStates.get(i).closureDone =
+                                  mark[allStates.get(i).id];
 
       // Warning : The following piece of code is just an optimization.
       // in case of trouble, just remove this piece.
@@ -584,11 +583,11 @@ public class NfaState
          sometingOptimized = false;
          for (i = 0; optReqd && i < epsilonMoves.size(); i++)
          {
-            if ((tmp1 = (NfaState)epsilonMoves.get(i)).HasTransitions())
+            if ((tmp1 = epsilonMoves.get(i)).HasTransitions())
             {
                for (j = i + 1; j < epsilonMoves.size(); j++)
                {
-                  if ((tmp2 = (NfaState)epsilonMoves.get(j)).
+                  if ((tmp2 = epsilonMoves.get(j)).
                                                            HasTransitions() &&
                       (tmp1.asciiMoves[0] == tmp2.asciiMoves[0] &&
                        tmp1.asciiMoves[1] == tmp2.asciiMoves[1] &&
@@ -597,7 +596,7 @@ public class NfaState
                   {
                      if (equivStates == null)
                      {
-                        equivStates = new ArrayList();
+                        equivStates = new ArrayList<>();
                         equivStates.add(tmp1);
                      }
 
@@ -613,9 +612,9 @@ public class NfaState
                String tmp = "";
                for (int l = 0; l < equivStates.size(); l++)
                   tmp += String.valueOf(
-                            ((NfaState)equivStates.get(l)).id) + ", ";
+                            equivStates.get(l).id) + ", ";
 
-               if ((newState = (NfaState)equivStatesTable.get(tmp)) == null)
+               if ((newState = equivStatesTable.get(tmp)) == null)
                {
                   newState = CreateEquivState(equivStates);
                   equivStatesTable.put(tmp, newState);
@@ -632,11 +631,11 @@ public class NfaState
          {
             //if ((tmp1 = (NfaState)epsilonMoves.elementAt(i)).next == null)
                //continue;
-            tmp1 = (NfaState)epsilonMoves.get(i);
+            tmp1 = epsilonMoves.get(i);
 
             for (j = i + 1; j < epsilonMoves.size(); j++)
             {
-               tmp2 = (NfaState)epsilonMoves.get(j);
+               tmp2 = epsilonMoves.get(j);
 
                if (tmp1.next == tmp2.next)
                {
@@ -668,7 +667,7 @@ public class NfaState
       {
          for (i = 0; i < epsilonMoves.size(); i++)
             // Since we are doing a closure, just epsilon moves are unncessary
-            if (((NfaState)epsilonMoves.get(i)).HasTransitions())
+            if (epsilonMoves.get(i).HasTransitions())
                usefulEpsilonMoves++;
             else
                epsilonMoves.removeElementAt(i--);
@@ -695,13 +694,13 @@ public class NfaState
          epsilonMovesString = "{ ";
          for (int i = 0; i < epsilonMoves.size(); i++)
          {
-            if ((tempState = (NfaState)epsilonMoves.get(i)).
+            if ((tempState = epsilonMoves.get(i)).
                                                      HasTransitions())
             {
                if (tempState.stateName == -1)
                   tempState.GenerateCode();
 
-               ((NfaState)indexedAllStates.get(tempState.stateName)).inNextOf++;
+               indexedAllStates.get(tempState.stateName).inNextOf++;
                stateNames[cnt] = tempState.stateName;
                epsilonMovesString += tempState.stateName + ", ";
                if (cnt++ > 0 && cnt % 16 == 0)
@@ -735,11 +734,11 @@ public class NfaState
       if (s == null || s.equals("null;"))
          return false;
 
-      int[] states = (int[])allNextStates.get(s);
+      int[] states = allNextStates.get(s);
 
       for (int i = 0; i < states.length; i++)
       {
-         NfaState tmp = (NfaState)indexedAllStates.get(states[i]);
+         NfaState tmp = indexedAllStates.get(states[i]);
 
          if ((tmp.asciiMoves[c / 64 ] & (1L << c % 64)) != 0L)
             return true;
@@ -802,12 +801,12 @@ public class NfaState
       return i;
    }
 
-   public int MoveFrom(char c, List newStates)
+   public int MoveFrom(char c, List<NfaState> newStates)
    {
       if (CanMoveUsingChar(c))
       {
          for (int i = next.epsilonMoves.size(); i-- > 0;)
-            InsertInOrder(newStates, (NfaState)next.epsilonMoves.get(i));
+            InsertInOrder(newStates, next.epsilonMoves.get(i));
 
          return kindToPrint;
       }
@@ -815,20 +814,20 @@ public class NfaState
       return Integer.MAX_VALUE;
    }
 
-   public static int MoveFromSet(char c, List states, List newStates)
+   public static int MoveFromSet(char c, List<NfaState> states, List<NfaState> newStates)
    {
       int tmp;
       int retVal = Integer.MAX_VALUE;
 
       for (int i = states.size(); i-- > 0;)
          if (retVal >
-             (tmp = ((NfaState)states.get(i)).MoveFrom(c, newStates)))
+             (tmp = states.get(i).MoveFrom(c, newStates)))
             retVal = tmp;
 
       return retVal;
    }
 
-   static List allBitVectors = new ArrayList();
+   static List<String> allBitVectors = new ArrayList<>();
 
    /* This function generates the bit vectors of low and hi bytes for common
       bit vectors and returns those that are not common with anything (in
@@ -942,15 +941,15 @@ public class NfaState
                     "0x" + Long.toHexString(common[1]) + "L, " +
                     "0x" + Long.toHexString(common[2]) + "L, " +
                     "0x" + Long.toHexString(common[3]) + "L\n};";
-            if ((ind = (Integer)lohiByteTab.get(tmp)) == null)
+            if ((ind = lohiByteTab.get(tmp)) == null)
             {
                allBitVectors.add(tmp);
 
                if (!AllBitsSet(tmp)) {
                   codeGenerator.switchToStaticsFile();
-                  codeGenerator.genCodeLine("static const " + Options.getLongType() + " jjbitVec" +  lohiByteCnt + "[] = " + tmp);
+                  codeGenerator.genCodeLine("static const " + Types.getLongType() + " jjbitVec" +  lohiByteCnt + "[] = " + tmp);
                }
-               lohiByteTab.put(tmp, ind = new Integer(lohiByteCnt++));
+               lohiByteTab.put(tmp, ind = Integer.valueOf(lohiByteCnt++));
             }
 
             tmpIndices[cnt++] = ind.intValue();
@@ -959,16 +958,16 @@ public class NfaState
                     "0x" + Long.toHexString(loBytes[i][1]) + "L, " +
                     "0x" + Long.toHexString(loBytes[i][2]) + "L, " +
                     "0x" + Long.toHexString(loBytes[i][3]) + "L\n};";
-            if ((ind = (Integer)lohiByteTab.get(tmp)) == null)
+            if ((ind = lohiByteTab.get(tmp)) == null)
             {
                allBitVectors.add(tmp);
 
                if (!AllBitsSet(tmp)) {
                  codeGenerator.switchToStaticsFile();
-                 codeGenerator.genCodeLine("static const " + Options.getLongType() + " jjbitVec" + lohiByteCnt + "[] = " + tmp);
+                 codeGenerator.genCodeLine("static const " + Types.getLongType() + " jjbitVec" + lohiByteCnt + "[] = " + tmp);
                  codeGenerator.switchToMainFile();
                }
-               lohiByteTab.put(tmp, ind = new Integer(lohiByteCnt++));
+               lohiByteTab.put(tmp, ind = Integer.valueOf(lohiByteCnt++));
             }
 
             tmpIndices[cnt++] = ind.intValue();
@@ -1005,22 +1004,22 @@ public class NfaState
                     "0x" + Long.toHexString(loBytes[i][2]) + "L, " +
                     "0x" + Long.toHexString(loBytes[i][3]) + "L\n};";
 
-            if ((ind = (Integer)lohiByteTab.get(tmp)) == null)
+            if ((ind = lohiByteTab.get(tmp)) == null)
             {
                allBitVectors.add(tmp);
 
                if (!AllBitsSet(tmp))
                {
                  codeGenerator.switchToStaticsFile();
-                 codeGenerator.genCodeLine("static const " + Options.getLongType() + " jjbitVec" +  lohiByteCnt + "[] = " + tmp);
+                 codeGenerator.genCodeLine("static const " + Types.getLongType() + " jjbitVec" +  lohiByteCnt + "[] = " + tmp);
                }
-               lohiByteTab.put(tmp, ind = new Integer(lohiByteCnt++));
+               lohiByteTab.put(tmp, ind = Integer.valueOf(lohiByteCnt++));
             }
 
             if (loByteVec == null)
-               loByteVec = new Vector();
+               loByteVec = new Vector<>();
 
-            loByteVec.add(new Integer(i));
+            loByteVec.add(Integer.valueOf(i));
             loByteVec.add(ind);
          }
       }
@@ -1032,7 +1031,7 @@ public class NfaState
    {
       for (int i = 0; i < nonAsciiTableForMethod.size(); i++)
       {
-         NfaState tmp = (NfaState)nonAsciiTableForMethod.get(i);
+         NfaState tmp = nonAsciiTableForMethod.get(i);
          if (EqualLoByteVectors(loByteVec, tmp.loByteVec) &&
              EqualNonAsciiMoveIndices(nonAsciiMoveIndices, tmp.nonAsciiMoveIndices))
          {
@@ -1045,7 +1044,7 @@ public class NfaState
       nonAsciiTableForMethod.add(this);
    }
 
-   private static boolean EqualLoByteVectors(List vec1, List vec2)
+   private static boolean EqualLoByteVectors(List<Integer> vec1, List<Integer> vec2)
    {
       if (vec1 == null || vec2 == null)
          return false;
@@ -1058,8 +1057,8 @@ public class NfaState
 
       for (int i = 0; i < vec1.size(); i++)
       {
-         if (((Integer)vec1.get(i)).intValue() !=
-             ((Integer)vec2.get(i)).intValue())
+         if (vec1.get(i).intValue() !=
+             vec2.get(i).intValue())
             return false;
       }
 
@@ -1105,11 +1104,11 @@ public class NfaState
    {
       Integer stateNameToReturn;
 
-      if ((stateNameToReturn = (Integer)stateNameForComposite.get(stateSetString)) != null)
+      if ((stateNameToReturn = stateNameForComposite.get(stateSetString)) != null)
          return stateNameToReturn.intValue();
 
       int toRet = 0;
-      int[] nameSet = (int[])allNextStates.get(stateSetString);
+      int[] nameSet = allNextStates.get(stateSetString);
 
       if (!starts)
          stateBlockTable.put(stateSetString, stateSetString);
@@ -1119,7 +1118,7 @@ public class NfaState
 
       if (nameSet.length == 1)
       {
-         stateNameToReturn = new Integer(nameSet[0]);
+         stateNameToReturn = Integer.valueOf(nameSet[0]);
          stateNameForComposite.put(stateSetString, stateNameToReturn);
          return nameSet[0];
       }
@@ -1129,26 +1128,26 @@ public class NfaState
          if (nameSet[i] == -1)
             continue;
 
-         NfaState st = (NfaState)indexedAllStates.get(nameSet[i]);
+         NfaState st = indexedAllStates.get(nameSet[i]);
          st.isComposite = true;
          st.compositeStates = nameSet;
       }
 
       while (toRet < nameSet.length &&
-             (starts && ((NfaState)indexedAllStates.get(nameSet[toRet])).inNextOf > 1))
+             (starts && indexedAllStates.get(nameSet[toRet]).inNextOf > 1))
          toRet++;
 
       Enumeration<String> e = compositeStateTable.keys();
       String s;
       while (e.hasMoreElements())
       {
-         s = (String)e.nextElement();
+         s = e.nextElement();
          if (!s.equals(stateSetString) && Intersect(stateSetString, s))
          {
-            int[] other = (int[])compositeStateTable.get(s);
+            int[] other = compositeStateTable.get(s);
 
             while (toRet < nameSet.length &&
-                   ((starts && ((NfaState)indexedAllStates.get(nameSet[toRet])).inNextOf > 1) ||
+                   ((starts && indexedAllStates.get(nameSet[toRet]).inNextOf > 1) ||
                     ElemOccurs(nameSet[toRet], other) >= 0))
                toRet++;
          }
@@ -1185,7 +1184,7 @@ public class NfaState
       else
          tmp = nameSet[toRet];
 
-      stateNameToReturn = new Integer(tmp);
+      stateNameToReturn = Integer.valueOf(tmp);
       stateNameForComposite.put(stateSetString, stateNameToReturn);
       compositeStateTable.put(stateSetString, nameSet);
       if (JavaCCGlobals.getCodeGenerator() != null ||
@@ -1203,7 +1202,7 @@ public class NfaState
 
    private static int StateNameForComposite(String stateSetString)
    {
-      return ((Integer)stateNameForComposite.get(stateSetString)).intValue();
+      return stateNameForComposite.get(stateSetString).intValue();
    }
 
    static int InitStateName()
@@ -1225,16 +1224,16 @@ public class NfaState
       return AddStartStateSet(epsilonMovesString);
    }
 
-   static Hashtable tableToDump = new Hashtable();
-   static List orderedStateSet = new ArrayList();
+   static Hashtable<String, int[]> tableToDump = new Hashtable<>();
+   static List<int[]> orderedStateSet = new ArrayList<>();
 
    static int lastIndex = 0;
    private static int[] GetStateSetIndicesForUse(String arrayString)
    {
       int[] ret;
-      int[] set = (int[])allNextStates.get(arrayString);
+      int[] set = allNextStates.get(arrayString);
 
-      if ((ret = (int[])tableToDump.get(arrayString)) == null)
+      if ((ret = tableToDump.get(arrayString)) == null)
       {
          ret = new int[2];
          ret[0] = lastIndex;
@@ -1256,7 +1255,7 @@ public class NfaState
       if (orderedStateSet.size() > 0)
     	  for (int i = 0; i < orderedStateSet.size(); i++)
     	  {
-    		  int[] set = (int[])orderedStateSet.get(i);
+    		  int[] set = orderedStateSet.get(i);
 
     		  for (int j = 0; j < set.length; j++)
     		  {
@@ -1289,7 +1288,7 @@ public class NfaState
       return retVal;
    }
 
-   static String GetStateSetString(List states)
+   static String GetStateSetString(List<NfaState> states)
    {
       if (states == null || states.size() == 0)
          return "null;";
@@ -1299,7 +1298,7 @@ public class NfaState
       for (int i = 0; i < states.size(); )
       {
          int k;
-         retVal += (k = ((NfaState)states.get(i)).stateName) + ", ";
+         retVal += (k = states.get(i).stateName) + ", ";
          set[i] = k;
 
          if (i++ > 0 && i % 16 == 0)
@@ -1354,7 +1353,7 @@ public class NfaState
 
       String set = next.epsilonMovesString;
 
-      int[] nameSet = (int[])allNextStates.get(set);
+      int[] nameSet = allNextStates.get(set);
 
       if (nameSet.length <= 2 || compositeStateTable.get(set) != null)
          return false;
@@ -1374,12 +1373,12 @@ public class NfaState
       }
 
       int j, blockLen = 0, commonFreq = 0;
-      Enumeration e = allNextStates.keys();
+      Enumeration<String> e = allNextStates.keys();
       boolean needUpdate;
 
       while (e.hasMoreElements())
       {
-         int[] tmpSet = (int[])allNextStates.get(e.nextElement());
+         int[] tmpSet = allNextStates.get(e.nextElement());
          if (tmpSet == nameSet)
             continue;
 
@@ -1437,7 +1436,7 @@ public class NfaState
       {
          if (live[i])
          {
-            if (((NfaState)indexedAllStates.get(nameSet[i])).isComposite)
+            if (indexedAllStates.get(nameSet[i]).isComposite)
                return false;
 
             stateDone[nameSet[i]] = true;
@@ -1457,7 +1456,7 @@ public class NfaState
          int at;
          boolean firstOne = true;
          String stringToFix;
-         int[] setToFix = (int[])allNextStates.get(stringToFix = (String)e.nextElement());
+         int[] setToFix = allNextStates.get(stringToFix = e.nextElement());
 
          if (setToFix == commonBlock)
             continue;
@@ -1490,30 +1489,30 @@ public class NfaState
 
       String set = next.epsilonMovesString;
 
-      int[] nameSet = (int[])allNextStates.get(set);
+      int[] nameSet = allNextStates.get(set);
 
       if (nameSet.length == 1 || compositeStateTable.get(set) != null ||
           stateSetsToFix.get(set) != null)
          return false;
 
       int i;
-      Hashtable occursIn = new Hashtable();
-      NfaState tmp = (NfaState)allStates.get(nameSet[0]);
+      Hashtable<String, int[]> occursIn = new Hashtable<>();
+      NfaState tmp = allStates.get(nameSet[0]);
 
       for (i = 1; i < nameSet.length; i++)
       {
-         NfaState tmp1 = (NfaState)allStates.get(nameSet[i]);
+         NfaState tmp1 = allStates.get(nameSet[i]);
 
          if (tmp.inNextOf != tmp1.inNextOf)
             return false;
       }
 
       int isPresent, j;
-      Enumeration e = allNextStates.keys();
+      Enumeration<String> e = allNextStates.keys();
       while (e.hasMoreElements())
       {
          String s;
-         int[] tmpSet = (int[])allNextStates.get(s = (String)e.nextElement());
+         int[] tmpSet = allNextStates.get(s = e.nextElement());
 
          if (tmpSet == nameSet)
             continue;
@@ -1545,7 +1544,7 @@ public class NfaState
       while (e.hasMoreElements())
       {
          String s;
-         int[] setToFix = (int[])occursIn.get(s = (String)e.nextElement());
+         int[] setToFix = occursIn.get(s = e.nextElement());
 
          if (stateSetsToFix.get(s) == null)
             stateSetsToFix.put(s, setToFix);
@@ -1562,15 +1561,15 @@ public class NfaState
 
    private static void FixStateSets()
    {
-      Hashtable fixedSets = new Hashtable();
-      Enumeration e = stateSetsToFix.keys();
+      Hashtable<String, int[]> fixedSets = new Hashtable<>();
+      Enumeration<String> e = stateSetsToFix.keys();
       int[] tmp = new int[generatedStates];
       int i;
 
       while (e.hasMoreElements())
       {
          String s;
-         int[] toFix = (int[])stateSetsToFix.get(s = (String)e.nextElement());
+         int[] toFix = stateSetsToFix.get(s = e.nextElement());
          int cnt = 0;
 
          //System.out.print("Fixing : ");
@@ -1590,7 +1589,7 @@ public class NfaState
 
       for (i = 0; i < allStates.size(); i++)
       {
-         NfaState tmpState = (NfaState)allStates.get(i);
+         NfaState tmpState = allStates.get(i);
          int[] newSet;
 
          if (tmpState.next == null || tmpState.next.usefulEpsilonMoves == 0)
@@ -1598,7 +1597,7 @@ public class NfaState
 
          /*if (compositeStateTable.get(tmpState.next.epsilonMovesString) != null)
             tmpState.next.usefulEpsilonMoves = 1;
-         else*/ if ((newSet = (int[])fixedSets.get(tmpState.next.epsilonMovesString)) != null)
+         else*/ if ((newSet = fixedSets.get(tmpState.next.epsilonMovesString)) != null)
             tmpState.FixNextStates(newSet);
       }
    }
@@ -1614,8 +1613,8 @@ public class NfaState
       if (set1 == null || set2 == null)
          return false;
 
-      int[] nameSet1 = (int[])allNextStates.get(set1);
-      int[] nameSet2 = (int[])allNextStates.get(set2);
+      int[] nameSet1 = allNextStates.get(set1);
+      int[] nameSet2 = allNextStates.get(set2);
 
       if (nameSet1 == null || nameSet2 == null)
          return false;
@@ -1634,21 +1633,21 @@ public class NfaState
    private static void DumpHeadForCase(CodeGenHelper codeGenerator, int byteNum)
    {
       if (byteNum == 0) {
-         codeGenerator.genCodeLine("         " + Options.getLongType() + " l = 1L << curChar;");
+         codeGenerator.genCodeLine("         " + Types.getLongType() + " l = 1L << curChar;");
          codeGenerator.genCodeLine("         (void)l;");
       } else if (byteNum == 1) {
-         codeGenerator.genCodeLine("         " + Options.getLongType() + " l = 1L << (curChar & 077);");
+         codeGenerator.genCodeLine("         " + Types.getLongType() + " l = 1L << (curChar & 077);");
          codeGenerator.genCodeLine("         (void)l;");
       } else {
          if (Options.getJavaUnicodeEscape() || unicodeWarningGiven)
          {
            codeGenerator.genCodeLine("         int hiByte = (curChar >> 8);");
            codeGenerator.genCodeLine("         int i1 = hiByte >> 6;");
-           codeGenerator.genCodeLine("         " + Options.getLongType() + " l1 = 1L << (hiByte & 077);");
+           codeGenerator.genCodeLine("         " + Types.getLongType() + " l1 = 1L << (hiByte & 077);");
          }
 
          codeGenerator.genCodeLine("         int i2 = (curChar & 0xff) >> 6;");
-         codeGenerator.genCodeLine("         " + Options.getLongType() + " l2 = 1L << (curChar & 077);");
+         codeGenerator.genCodeLine("         " + Types.getLongType() + " l2 = 1L << (curChar & 077);");
       }
 
       //codeGenerator.genCodeLine("         MatchLoop: do");
@@ -1659,18 +1658,18 @@ public class NfaState
       codeGenerator.genCodeLine("            {");
    }
 
-   private static Vector PartitionStatesSetForAscii(int[] states, int byteNum)
+   private static Vector<List<NfaState>> PartitionStatesSetForAscii(int[] states, int byteNum)
    {
       int[] cardinalities = new int[states.length];
-      Vector original = new Vector();
-      Vector partition = new Vector();
+      Vector<NfaState> original = new Vector<>();
+      Vector<List<NfaState>> partition = new Vector<>();
       NfaState tmp;
 
       original.setSize(states.length);
       int cnt = 0;
       for (int i = 0; i < states.length; i++)
       {
-         tmp = (NfaState)allStates.get(states[i]);
+         tmp = allStates.get(states[i]);
 
          if (tmp.asciiMoves[byteNum] != 0L)
          {
@@ -1695,7 +1694,7 @@ public class NfaState
 
       while (original.size() > 0)
       {
-         tmp = (NfaState)original.get(0);
+         tmp = original.get(0);
          original.removeElement(tmp);
 
          long bitVec = tmp.asciiMoves[byteNum];
@@ -1704,7 +1703,7 @@ public class NfaState
 
          for (int j = 0; j < original.size(); j++)
          {
-            NfaState tmp1 = (NfaState)original.get(j);
+            NfaState tmp1 = original.get(j);
 
             if ((tmp1.asciiMoves[byteNum] & bitVec) == 0L)
             {
@@ -1751,7 +1750,7 @@ public class NfaState
    {
       int i;
 
-      int[] nameSet = (int[])allNextStates.get(key);
+      int[] nameSet = allNextStates.get(key);
 
       if (nameSet.length == 1 || dumped[StateNameForComposite(key)])
          return;
@@ -1765,7 +1764,7 @@ public class NfaState
 
       for (i = 0; i < nameSet.length; i++)
       {
-         tmp = (NfaState)allStates.get(nameSet[i]);
+         tmp = allStates.get(nameSet[i]);
 
          if (tmp.asciiMoves[byteNum] != 0L)
          {
@@ -1815,7 +1814,7 @@ public class NfaState
          return;
       }
 
-      List partition = PartitionStatesSetForAscii(nameSet, byteNum);
+      List<List<NfaState>> partition = PartitionStatesSetForAscii(nameSet, byteNum);
 
       if (!toPrint.equals(""))
          codeGenerator.genCode(toPrint);
@@ -1827,11 +1826,11 @@ public class NfaState
 
       for (i = 0; i < partition.size(); i++)
       {
-         List subSet = (List)partition.get(i);
+         List<NfaState> subSet = partition.get(i);
 
          for (int j = 0; j < subSet.size(); j++)
          {
-            tmp = (NfaState)subSet.get(j);
+            tmp = subSet.get(j);
 
             if (stateBlock)
                dumped[tmp.stateName] = true;
@@ -1850,7 +1849,7 @@ public class NfaState
       if (next == null || next.epsilonMovesString == null)
          return false;
 
-      int[] set = (int[])allNextStates.get(next.epsilonMovesString);
+      int[] set = allNextStates.get(next.epsilonMovesString);
       return ElemOccurs(stateName, set) >= 0;
    }
 
@@ -1860,7 +1859,7 @@ public class NfaState
 
       for (int j = 0; j < allStates.size(); j++)
       {
-         NfaState temp1 = (NfaState)allStates.get(j);
+         NfaState temp1 = allStates.get(j);
 
          if (this == temp1 || temp1.stateName == -1 || temp1.dummy ||
              stateName == temp1.stateName || temp1.asciiMoves[byteNum] == 0L)
@@ -1902,7 +1901,7 @@ public class NfaState
 
       if (next != null && next.usefulEpsilonMoves > 0)
       {
-         int[] stateNames = (int[])allNextStates.get(
+         int[] stateNames = allNextStates.get(
                                           next.epsilonMovesString);
          if (next.usefulEpsilonMoves == 1)
          {
@@ -1949,7 +1948,7 @@ public class NfaState
 
       for (int j = 0; j < allStates.size(); j++)
       {
-         NfaState temp1 = (NfaState)allStates.get(j);
+         NfaState temp1 = allStates.get(j);
 
          if (this == temp1 || temp1.stateName == -1 || temp1.dummy ||
              stateName == temp1.stateName || temp1.asciiMoves[byteNum] == 0L)
@@ -2052,7 +2051,7 @@ public class NfaState
 
       if (next != null && next.usefulEpsilonMoves > 0)
       {
-         int[] stateNames = (int[])allNextStates.get(
+         int[] stateNames = allNextStates.get(
                                           next.epsilonMovesString);
          if (next.usefulEpsilonMoves == 1)
          {
@@ -2096,16 +2095,16 @@ public class NfaState
    private static void DumpAsciiMoves(CodeGenHelper codeGenerator, int byteNum)
    {
       boolean[] dumped = new boolean[Math.max(generatedStates, dummyStateIndex + 1)];
-      Enumeration e = compositeStateTable.keys();
+      Enumeration<String> e = compositeStateTable.keys();
 
       DumpHeadForCase(codeGenerator, byteNum);
 
       while (e.hasMoreElements())
-         DumpCompositeStatesAsciiMoves(codeGenerator, (String)e.nextElement(), byteNum, dumped);
+         DumpCompositeStatesAsciiMoves(codeGenerator, e.nextElement(), byteNum, dumped);
 
       for (int i = 0; i < allStates.size(); i++)
       {
-         NfaState temp = (NfaState)allStates.get(i);
+         NfaState temp = allStates.get(i);
 
          if (dumped[temp.stateName] || temp.lexState != LexGenCPP.lexStateIndex ||
              !temp.HasTransitions() || temp.dummy ||
@@ -2158,7 +2157,7 @@ public class NfaState
                                       String key, boolean[] dumped)
    {
       int i;
-      int[] nameSet = (int[])allNextStates.get(key);
+      int[] nameSet = allNextStates.get(key);
 
       if (nameSet.length == 1 || dumped[StateNameForComposite(key)])
          return;
@@ -2172,7 +2171,7 @@ public class NfaState
 
       for (i = 0; i < nameSet.length; i++)
       {
-         tmp = (NfaState)allStates.get(nameSet[i]);
+         tmp = allStates.get(nameSet[i]);
 
          if (tmp.nonAsciiMethod != -1)
          {
@@ -2229,7 +2228,7 @@ public class NfaState
 
       for (i = 0; i < nameSet.length; i++)
       {
-         tmp = (NfaState)allStates.get(nameSet[i]);
+         tmp = allStates.get(nameSet[i]);
 
          if (tmp.nonAsciiMethod != -1)
          {
@@ -2250,7 +2249,7 @@ public class NfaState
       boolean nextIntersects = selfLoop();
       for (int j = 0; j < allStates.size(); j++)
       {
-         NfaState temp1 = (NfaState)allStates.get(j);
+         NfaState temp1 = allStates.get(j);
 
          if (this == temp1 || temp1.stateName == -1 || temp1.dummy ||
              stateName == temp1.stateName || (temp1.nonAsciiMethod == -1))
@@ -2268,7 +2267,7 @@ public class NfaState
       {
          if (loByteVec != null && loByteVec.size() > 1)
             codeGenerator.genCodeLine("                  if ((jjbitVec" +
-             ((Integer)loByteVec.get(1)).intValue() + "[i2" +
+             loByteVec.get(1).intValue() + "[i2" +
                 "] & l2) != 0L)");
       }
       else
@@ -2286,7 +2285,7 @@ public class NfaState
 
       if (next != null && next.usefulEpsilonMoves > 0)
       {
-         int[] stateNames = (int[])allNextStates.get(
+         int[] stateNames = allNextStates.get(
                                           next.epsilonMovesString);
          if (next.usefulEpsilonMoves == 1)
          {
@@ -2330,7 +2329,7 @@ public class NfaState
 
       for (int j = 0; j < allStates.size(); j++)
       {
-         NfaState temp1 = (NfaState)allStates.get(j);
+         NfaState temp1 = allStates.get(j);
 
          if (this == temp1 || temp1.stateName == -1 || temp1.dummy ||
              stateName == temp1.stateName || (temp1.nonAsciiMethod == -1))
@@ -2361,7 +2360,7 @@ public class NfaState
          {
             if (loByteVec != null && loByteVec.size() > 1)
                codeGenerator.genCodeLine("                  if ((jjbitVec" +
-                ((Integer)loByteVec.get(1)).intValue() + "[i2" +
+                loByteVec.get(1).intValue() + "[i2" +
                    "] & l2) != 0L" + kindCheck + ")");
          }
          else
@@ -2382,7 +2381,7 @@ public class NfaState
             if (loByteVec != null && loByteVec.size() > 1)
             {
                codeGenerator.genCodeLine("                  if ((jjbitVec" +
-                ((Integer)loByteVec.get(1)).intValue() + "[i2" +
+                loByteVec.get(1).intValue() + "[i2" +
                 "] & l2) == 0L)");
                codeGenerator.genCodeLine("                     break;");
             }
@@ -2402,7 +2401,7 @@ public class NfaState
       {
          if (loByteVec != null && loByteVec.size() > 1)
             codeGenerator.genCodeLine("                  if ((jjbitVec" +
-             ((Integer)loByteVec.get(1)).intValue() + "[i2" +
+             loByteVec.get(1).intValue() + "[i2" +
                 "] & l2) != 0L)");
       }
       else
@@ -2413,7 +2412,7 @@ public class NfaState
 
       if (next != null && next.usefulEpsilonMoves > 0)
       {
-         int[] stateNames = (int[])allNextStates.get(
+         int[] stateNames = allNextStates.get(
                                           next.epsilonMovesString);
          if (next.usefulEpsilonMoves == 1)
          {
@@ -2453,17 +2452,17 @@ public class NfaState
    public static void DumpCharAndRangeMoves(CodeGenHelper codeGenerator)
    {
       boolean[] dumped = new boolean[Math.max(generatedStates, dummyStateIndex + 1)];
-      Enumeration e = compositeStateTable.keys();
+      Enumeration<String> e = compositeStateTable.keys();
       int i;
 
       DumpHeadForCase(codeGenerator, -1);
 
       while (e.hasMoreElements())
-         DumpCompositeStatesNonAsciiMoves(codeGenerator, (String)e.nextElement(), dumped);
+         DumpCompositeStatesNonAsciiMoves(codeGenerator, e.nextElement(), dumped);
 
       for (i = 0; i < allStates.size(); i++)
       {
-         NfaState temp = (NfaState)allStates.get(i);
+         NfaState temp = allStates.get(i);
 
          if (temp.stateName == -1 || dumped[temp.stateName] || temp.lexState != LexGenCPP.lexStateIndex ||
              !temp.HasTransitions() || temp.dummy )
@@ -2522,7 +2521,7 @@ public class NfaState
 
       for (int i = 0; i < nonAsciiTableForMethod.size(); i++)
       {
-         NfaState tmp = (NfaState)nonAsciiTableForMethod.get(i);
+         NfaState tmp = nonAsciiTableForMethod.get(i);
          tmp.DumpNonAsciiMoveMethod(codeGenerator);
       }
    }
@@ -2531,7 +2530,7 @@ public class NfaState
    {
       int j;
       codeGenerator.generateMethodDefHeader("" + Options.getBooleanType() + "", LexGenCPP.tokMgrClassName, "jjCanMove_" + nonAsciiMethod +
-                    "(int hiByte, int i1, int i2, " + Options.getLongType() + " l1, " + Options.getLongType() + " l2)");
+                    "(int hiByte, int i1, int i2, " + Types.getLongType() + " l1, " + Types.getLongType() + " l2)");
       codeGenerator.genCodeLine("{");
       codeGenerator.genCodeLine("   switch(hiByte)");
       codeGenerator.genCodeLine("   {");
@@ -2541,12 +2540,12 @@ public class NfaState
          for (j = 0; j < loByteVec.size(); j += 2)
          {
             codeGenerator.genCodeLine("      case " +
-                         ((Integer)loByteVec.get(j)).intValue() + ":");
-            if (!AllBitsSet((String)allBitVectors.get(
-                 ((Integer)loByteVec.get(j + 1)).intValue())))
+                         loByteVec.get(j).intValue() + ":");
+            if (!AllBitsSet(allBitVectors.get(
+                 loByteVec.get(j + 1).intValue())))
             {
                codeGenerator.genCodeLine("         return ((jjbitVec" +
-                ((Integer)loByteVec.get(j + 1)).intValue() + "[i2" +
+                loByteVec.get(j + 1).intValue() + "[i2" +
                    "] & l2) != 0L);");
             }
             else
@@ -2561,11 +2560,11 @@ public class NfaState
       {
          do
          {
-            if (!AllBitsSet((String)allBitVectors.get(
+            if (!AllBitsSet(allBitVectors.get(
                                nonAsciiMoveIndices[j - 2])))
                codeGenerator.genCodeLine("         if ((jjbitVec" + nonAsciiMoveIndices[j - 2] +
                             "[i1] & l1) != 0L)");
-            if (!AllBitsSet((String)allBitVectors.get(
+            if (!AllBitsSet(allBitVectors.get(
                                nonAsciiMoveIndices[j - 1])))
             {
                codeGenerator.genCodeLine("            if ((jjbitVec" + nonAsciiMoveIndices[j - 1] +
@@ -2585,14 +2584,14 @@ public class NfaState
 
    private static void ReArrange()
    {
-      List v = allStates;
-      allStates = new ArrayList(Collections.nCopies(generatedStates, null));
+      List<NfaState> v = allStates;
+      allStates = new ArrayList<>(Collections.nCopies(generatedStates, null));
 
       if (allStates.size() != generatedStates) throw new Error("What??");
 
       for (int j = 0; j < v.size(); j++)
       {
-         NfaState tmp = (NfaState)v.get(j);
+         NfaState tmp = v.get(j);
          if (tmp.stateName != -1 && !tmp.dummy)
             allStates.set(tmp.stateName, tmp);
       }
@@ -2699,7 +2698,7 @@ public class NfaState
 
    private static void FindStatesWithNoBreak()
    {
-      Hashtable printed = new Hashtable();
+      Hashtable<String, String> printed = new Hashtable<>();
       boolean[] put = new boolean[generatedStates];
       int cnt = 0;
       int i, j, foundAt = 0;
@@ -2708,7 +2707,7 @@ public class NfaState
       for (j = 0; j < allStates.size(); j++)
       {
          NfaState stateForCase = null;
-         NfaState tmpState = (NfaState)allStates.get(j);
+         NfaState tmpState = allStates.get(j);
 
          if (tmpState.stateName == -1 || tmpState.dummy || !tmpState.UsefulState() ||
              tmpState.next == null || tmpState.next.usefulEpsilonMoves < 1)
@@ -2720,7 +2719,7 @@ public class NfaState
             continue;
 
          printed.put(s, s);
-         int[] nexts = (int[])allNextStates.get(s);
+         int[] nexts = allNextStates.get(s);
 
          if (nexts.length == 1)
             continue;
@@ -2732,7 +2731,7 @@ public class NfaState
             if ((state = nexts[i]) == -1)
                continue;
 
-            NfaState tmp = (NfaState)allStates.get(state);
+            NfaState tmp = allStates.get(state);
 
             if (!tmp.isComposite && tmp.inNextOf == 1)
             {
@@ -2758,7 +2757,7 @@ public class NfaState
             if ((state = nexts[i]) == -1)
                continue;
 
-            NfaState tmp = (NfaState)allStates.get(state);
+            NfaState tmp = allStates.get(state);
 
             if (!put[state] && tmp.inNextOf > 1 && !tmp.isComposite && tmp.stateForCase == null)
             {
@@ -2786,7 +2785,7 @@ public class NfaState
             if ((state = nexts[i]) == -1)
                continue;
 
-            NfaState tmp = (NfaState)allStates.get(state);
+            NfaState tmp = allStates.get(state);
             if (tmp.inNextOf <= 1)
                put[state] = false;
          }
@@ -2814,7 +2813,7 @@ public class NfaState
 
       for (i = 0; i < allStates.size(); i++)
       {
-         NfaState temp = (NfaState)allStates.get(i);
+         NfaState temp = allStates.get(i);
 
          if (temp.lexState != LexGenCPP.lexStateIndex ||
              !temp.HasTransitions() || temp.dummy ||
@@ -2833,15 +2832,15 @@ public class NfaState
          temp.GenerateNonAsciiMoves(codeGenerator);
       }
 
-      Enumeration e = stateNameForComposite.keys();
+      Enumeration<String> e = stateNameForComposite.keys();
 
       while (e.hasMoreElements())
       {
-         String s = (String)e.nextElement();
-         int state = ((Integer)stateNameForComposite.get(s)).intValue();
+         String s = e.nextElement();
+         int state = stateNameForComposite.get(s).intValue();
 
          if (state >= generatedStates)
-            statesForState[LexGenCPP.lexStateIndex][state] = (int[])allNextStates.get(s);
+            statesForState[LexGenCPP.lexStateIndex][state] = allNextStates.get(s);
       }
 
       if (stateSetsToFix.size() != 0)
@@ -3103,24 +3102,24 @@ public class NfaState
       done = false;
       mark = null;
       stateDone = null;
-      allStates = new ArrayList();
-      indexedAllStates = new ArrayList();
-      nonAsciiTableForMethod = new ArrayList();
-      equivStatesTable = new Hashtable();
-      allNextStates = new Hashtable();
-      lohiByteTab = new Hashtable();
-      stateNameForComposite = new Hashtable();
-      compositeStateTable = new Hashtable();
-      stateBlockTable = new Hashtable();
-      stateSetsToFix = new Hashtable();
-      allBitVectors = new ArrayList();
+      allStates = new ArrayList<>();
+      indexedAllStates = new ArrayList<>();
+      nonAsciiTableForMethod = new ArrayList<>();
+      equivStatesTable = new Hashtable<>();
+      allNextStates = new Hashtable<>();
+      lohiByteTab = new Hashtable<>();
+      stateNameForComposite = new Hashtable<>();
+      compositeStateTable = new Hashtable<>();
+      stateBlockTable = new Hashtable<>();
+      stateSetsToFix = new Hashtable<>();
+      allBitVectors = new ArrayList<>();
       tmpIndices = new int[512];
       allBits = "{\n   0xffffffffffffffffL, " +
                     "0xffffffffffffffffL, " +
                     "0xffffffffffffffffL, " +
                     "0xffffffffffffffffL\n};";
-      tableToDump = new Hashtable();
-      orderedStateSet = new ArrayList();
+      tableToDump = new Hashtable<>();
+      orderedStateSet = new ArrayList<>();
       lastIndex = 0;
       //boilerPlateDumped = false;
       jjCheckNAddStatesUnaryNeeded = false;
@@ -3146,7 +3145,7 @@ public class NfaState
      List<NfaState> cleanStates = new ArrayList<NfaState>();
      NfaState startState = null;
      for (int i = 0; i < allStates.size(); i++) {
-       NfaState tmp = (NfaState)allStates.get(i);
+       NfaState tmp = allStates.get(i);
        if (tmp.stateName == -1) {
            assert(tmp.kindToPrint == Integer.MAX_VALUE);
            continue;
