@@ -38,23 +38,24 @@ public class ASTProduction extends JJTreeNode
   }
 
   String name;
-  Vector throws_list = new Vector();
+  Vector<String> throws_list = new Vector<>();
 
-  private Hashtable scopes = new Hashtable();
+  private Hashtable<NodeScope, Integer> scopes = new Hashtable<>();
   private int nextNodeScopeNumber = 0;
 
 
   int getNodeScopeNumber(NodeScope s)
   {
-    Integer i = (Integer)scopes.get(s);
+    Integer i = scopes.get(s);
     if (i == null) {
-      i = new Integer(nextNodeScopeNumber++);
+      i = Integer.valueOf(nextNodeScopeNumber++);
       scopes.put(s, i);
     }
     return i.intValue();
   }
 
   /** Accept the visitor. **/
+  @Override
   public Object jjtAccept(JJTreeParserVisitor visitor, Object data) {
     return visitor.visit(this, data);
   }
